# OLAM

./: .gitignore  Configuration.py  LICENSE  LICENSE.md  README.md  data.txt  data48states.txt  logistics_model_learner.py  logistics_simulator.py  main.py  pyproject.toml  requirements.txt  softmax_example.py  stats.py
.github/workflows/: python-ci.yml
Analysis/Benchmarks/elevators/: 1_p00_elevators_gen.pddl  2_p01_elevators_gen.pddl  3_p02_elevators_gen.pddl  5_p04_elevators_gen.pddl
Analysis/Benchmarks/floortile/: 2_p01_floortile_gen.pddl  4_p04_floortile_gen.pddl  5_p03_floortile_gen.pddl  6_p05_floortile_gen.pddl  8_p06_floortile_gen.pddl
Analysis/IJCAI_2021_Results/Results_cert/: barman_action_model_eval.xls  blocksworld_action_model_eval.xls  depots_action_model_eval.xls  driverlog_action_model_eval.xls  elevators_action_model_eval.xls  ferry_action_model_eval.xls  floortile_action_model_eval.xls  gold-miner_action_model_eval.xls  grid_action_model_eval.xls  gripper_action_model_eval.xls  hanoi_action_model_eval.xls  matching-bw_action_model_eval.xls  miconic_action_model_eval.xls  n-puzzle_action_model_eval.xls  overall_summary.xls  (+9 more)
OLAM/: Learner.py  Planner.py  env.py
OLAM/util/: state_util.py
Util/: Dataframe_generator.py  Latex_generator.py  LogReader.py  PddlParser.py  Simulator.py  metrics.py  overall_summary_certain_nostripsass_withaverage.tex  preprocessing.py
olam/: OLAM.py
olam/learning/: action_generator.py  goal_generator.py  learner.py
olam/modeling/: PDDLenv.py  symbolic_observation.py  trajectory.py
olam/util/: ground_actions_util.py  util.py
scripts/: make_distrib.sh  ruff.sh
tests/: benchmark.xlsx  conftest.py  test_results.py
(+932 files in other folders)
